--- a/application/templates/dashboard/show.html
+++ b/application/templates/dashboard/show.html
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-lg-12">
-        {% include 'dashboard/_reports.html' %}
+        {% include 'dashboard/_actions.html' %}
     </div>
 </div>
 {% endblock %}
