--- a/application/templates/dashboard/_actions.html
+++ b/application/templates/dashboard/_actions.html
@@ -1,46 +1,62 @@
 {% if actions %}
     <div class="row">
         <div class="col-lg-12">
-            <table class="table table-bordered table-striped">
-                <tr>
-                    <th>Title</th>
-                    <th>Host</th>
-                    <th>Url</th>
-                    <th>Name</th>
-                    <th>Referrer</th>
-                    <th>Application name</th>
-                    <th>Language</th>
-                    <th>Cookie</th>
-                    <th>Java</th>
-                    <th>User agent</th>
-                    <th>Browser Version</th>
-                    <th>Browser Version Minor</th>
-                    <th>Screen Width</th>
-                    <th>Screen Height</th>
-                    <th>Created At</th>
-                </tr>
-                {% for action in actions %}
+            {% for action in actions %}
+                <table class="table table-bordered table-striped">
                     <tr>
-                        <td>{{ action.websiteTitle }}</td>
-                        <td>{{ action.websiteHost }}</td>
-                        <td>{{ action.websiteUrl }}</td>
-                        <td>{{ action.name }}</td>
-                        <td>{{ action.referrer }}</td>
-                        <td>{{ action.appName }}</td>
-                        <td>{{ action.language }}</td>
-                        <td><i class="{% if action.cookie %}glyphicon glyphicon-ok{% else %}glyphicon glyphicon-remove{% endif %}"></i></td>
-                        <td><i class="{% if action.java %}glyphicon glyphicon-ok{% else %}glyphicon glyphicon-remove{% endif %}"></i></td>
-                        <td>{{ action.userAgent }}</td>
-                        <td>{{ action.browserVersion }}</td>
-                        <td>{{ action.browserVersionMinor }}</td>
-                        <td>{{ action.screenWidth }}px</td>
-                        <td>{{ action.screenHeight }}px</td>
+                        <td colspan="5">
+                            {{ action.website.title }}
+                        </td>
                         <td>
                             {{ action.createdAt.dateTime }}
                         </td>
                     </tr>
-                {% endfor %}
-            </table>
+                    <tr>
+                        <th>
+                            Url
+                        </th>
+                        <th>
+                            Referrer
+                        </th>
+                        <th>
+                            Language
+                        </th>
+                        <th>
+                            Browser
+                        </th>
+                        <th>
+                            Operating System
+                        </th>
+                        <th>
+                            Device
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            {{ action.website.url }}
+                        </td>
+                        <td>
+                            {% if action.referrer %}{{ action.referrer }}{% else %}none {% endif %}
+                        </td>
+                        <td>
+                            {{ action.language }}
+                        </td>
+                        <td>
+                            {{ action.browser.name }}
+                        </td>
+                        <td>
+                            {{ action.os.name }} {{ action.os.version }}
+                        </td>
+                        {% if action.device.isMobile %}
+                            <td>{{ action.device.name }}</td>
+                        {% else %}
+                            <td>
+                                <i class="glyphicon glyphicon-remove"></i>
+                            </td>
+                        {% endif %}
+                    </tr>
+                </table>
+            {% endfor %}
         </div>
     </div>
 {% endif %}
