Admin panel theme integration, visit page, dashboard page upgrade

--- a/application/static/less/main.less
+++ b/application/static/less/main.less
@@ -50,5 +50,20 @@
 @import "../vendors/bower_components/bootstrap/less/utilities.less";
 @import "../vendors/bower_components/bootstrap/less/responsive-utilities.less";
 
+// Font Awesome
+@import "../vendors/bower_components/components-font-awesome/less/variables.less";
+@fa-font-path:        "../vendors/bower_components/components-font-awesome/fonts";
+@import "../vendors/bower_components/components-font-awesome/less/mixins.less";
+@import "../vendors/bower_components/components-font-awesome/less/path.less";
+@import "../vendors/bower_components/components-font-awesome/less/core.less";
+@import "../vendors/bower_components/components-font-awesome/less/larger.less";
+@import "../vendors/bower_components/components-font-awesome/less/fixed-width.less";
+@import "../vendors/bower_components/components-font-awesome/less/list.less";
+@import "../vendors/bower_components/components-font-awesome/less/bordered-pulled.less";
+@import "../vendors/bower_components/components-font-awesome/less/spinning.less";
+@import "../vendors/bower_components/components-font-awesome/less/rotated-flipped.less";
+@import "../vendors/bower_components/components-font-awesome/less/stacked.less";
+@import "../vendors/bower_components/components-font-awesome/less/icons.less";
 // Custom
+@import "sb-admin-2.less";
 @import "gowik.less";
