--- a/application/templates/user/login.html
+++ b/application/templates/user/login.html
@@ -1,32 +1,44 @@
-{% extends 'base.html' %}
+{% load static %}
 
-{% block title %}Gowik - Login{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% block head %}
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="Shortcut icon" href="{{ STATIC_URL }}images/favicon.gif" />
+        <!-- style -->
+        <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css" media="screen" />
+        <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet" type="text/css" media="screen" />
 
-{% block navbar %}
-{% endblock %}
-
-{% block content %}
-<div class="row">
-    <div class="col-lg-4 col-lg-offset-4">
-        <h1>Log in</h1>
-
-        {% if registered %}
-            <p>already logged in</p>
-        {% else %}
-
-        <form id="user_log_in" method="post" action="/user/login/"
-                enctype="multipart/form-data">
-            {% csrf_token %}
-
-            <!-- Display each form. The as_p method wraps each element in a paragraph
-                 (<p>) element. This ensures each element appears on a new line,
-                 making everything look neater. -->
-            {{ login_form.as_p }}
-
-            <!-- Provide a button to click to submit the form. -->
-            <input type="submit" name="submit" value="Login" class="btn btn-primary"/>
-        </form>
-        {% endif %}
+        <script type="text/javascript" src='{% static 'jquery/jquery.min.js' %}'></script>
+        <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.min.js' %}'></script>
+    {% endblock %}
+    <title>{% block title %}Gowik - Log In{% endblock %}</title>
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Please Sign In</h3>
+                    </div>
+                    <div class="panel-body">
+                        <form id="user_log_in"
+                                method="post"
+                                action="/user/login/"
+                                enctype="multipart/form-data">
+                            <fieldset>
+                                {% csrf_token %}
+                                {{ login_form.as_p }}
+                                <!-- Change this to a button or input when using this as a form -->
+                                <input type="submit" name="submit" value="Login" class="btn btn-lg btn-success btn-block"/>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-{% endblock %}
+</body>
+</html>
