Project name change

--- a/application/static/less/main.less
+++ b/application/static/less/main.less
@@ -66,6 +66,6 @@
 @import "../vendors/bower_components/components-font-awesome/less/icons.less";
 // Custom
 @import "sb-admin-2.less";
-@import "gowik.less";
+@import "gonalytics.less";
 
 @import url(http://weloveiconfonts.com/api/?family=fontelico);
