--- a/application/templates/user/login.html
+++ b/application/templates/user/login.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src='{% static 'jquery/jquery.min.js' %}'></script>
         <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.min.js' %}'></script>
     {% endblock %}
-    <title>{% block title %}Gowik - Log In{% endblock %}</title>
+    <title>{% block title %}Gonalytics - Log In{% endblock %}</title>
 </head>
 <body>
     <div class="container">
