Adjusting to the new API (partialy done)

--- a/application/templates/dashboard/show.html
+++ b/application/templates/dashboard/show.html
@@ -126,7 +126,7 @@
                         $(function() {
                             Morris.Area({
                                 element: 'morris-area-chart',
-                                data: {{ visitsGroupedByFirstAction|safe }},
+                                data: '',
                                 xkey: 'dateTime',
                                 ykeys: ['amount'],
                                 labels: ['Number of actions'],
